--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -87,7 +87,7 @@ jobs:
         path: wheelhouse/*.whl
 
   upload_pypi:
-    needs: [build_wheels, build_sdist]
+    needs: [build_arch_wheels, build_wheels, build_sdist]
     runs-on: ubuntu-latest
     environment: PyPI release
     if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')
