--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -37,7 +37,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-10.15]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
 
     - uses: actions/checkout@v3
@@ -46,12 +46,14 @@ jobs:
 
     # Used to host cibuildwheel
     - uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
 
     - name: Build wheels
       uses: pypa/cibuildwheel@v2.11.3
       # to supply options, put them in 'env', like:
       # env:
-        #   CIBW_SOME_OPTION: value
+      #   CIBW_SOME_OPTION: value
 
     - uses: actions/upload-artifact@v3
       with:
