fix: limit windows builds to amd64 arch
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,7 +109,7 @@ before-all = [
 
 [tool.cibuildwheel.windows]
 build = "cp3{8,9,10,11}-win*"
-archs = ["auto"]
+archs = ["AMD64"]
 before-all = [
     "pipx install ninja",
 ]
