--- a/meson.build
+++ b/meson.build
@@ -29,6 +29,11 @@ if host_machine.system() == 'windows' and cpp.get_id() == 'gcc'
 endif
 ##
 
+if host_machine.system() == 'darwin'
+  # Enable c++11 support
+  add_project_arguments('-std=c++11', language: ['cpp'])
+endif
+
 # Dependencies
 jack2_dep = dependency('jack', version: '>=1.9.11', required: false)
 jack1_dep = dependency('jack', version: ['>=0.125.0', '<1.0'], required: false)
