--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -35,6 +35,7 @@ jobs:
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
@@ -44,7 +45,7 @@ jobs:
         submodules: true
 
     - name: Build wheels
-      uses: pypa/cibuildwheel@v2.11.4
+      uses: pypa/cibuildwheel@v2.12.3
 
     - uses: actions/upload-artifact@v3
       with:
@@ -66,7 +67,7 @@ jobs:
      with:
        platforms: all
 
-   - uses: pypa/cibuildwheel@v2.11.3
+   - uses: pypa/cibuildwheel@v2.12.3
      env:
        CIBW_ARCHS: ${{ matrix.arch }}
 
@@ -83,9 +84,8 @@ jobs:
    needs: [build_arch_wheels, build_wheels, build_sdist]
    runs-on: ubuntu-latest
    environment: PyPI release
-   if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')
+   if: github.ref == 'refs/heads/develop'
    steps:
-
    - uses: actions/download-artifact@v3
      with:
        # unpacks default artifact into dist/
@@ -94,10 +94,11 @@ jobs:
        path: dist
 
    - name: Publish distribution to Test PyPI
-     uses: pypa/gh-action-pypi-publish@v1.6.4
+     uses: pypa/gh-action-pypi-publish@v1.8.6
      with:
        skip_existing: true
        user: __token__
        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
        repository_url: https://test.pypi.org/legacy/
+       verify-metadata: false
 
