--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "src/rtmidi"]
 	path = src/rtmidi
 	url = https://github.com/SpotlightKid/rtmidi.git
-	branch = python-rtmidi-5.0.0
+	branch = python-rtmidi
