--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,7 @@
 project(
     'python-rtmidi',
     'cpp',
-    version: '1.5.0rc1',
+    version: '1.5.0',
     license: 'MIT',
     default_options: [
         'warning_level=2'
