fix permissions on deploy workflow

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -6,6 +6,9 @@ on:
       - published
   workflow_dispatch:
 
+permissions:
+  id-token: write # This is required for requesting the JWT
+
 jobs:
   build_sdist:
    name: Build sdist
