--- a/rtmidi/meson.build
+++ b/rtmidi/meson.build
@@ -25,8 +25,9 @@ if host_machine.system() == 'linux' and alsa_dep.found() and get_option('alsa')
 endif
 
 if host_machine.system() == 'windows' and get_option('winmm')
+    defines += ['-D__WINDOWS_MM__']
     if meson.get_compiler('cpp').get_id() != 'gcc'
-        defines += ['-D__WINDOWS_MM__', '/EHsc']
+        defines += ['/EHsc']
     endif
     dependencies += [winmm_dep]
 endif
@@ -36,7 +37,9 @@ if jack_dep.found() and get_option('jack')
     dependencies += [jack_dep]
 endif
 
-if not get_option('verbose')
+if get_option('verbose')
+    defines += ['-D__RTMIDI_DEBUG__']
+else
     defines += ['-D__RTMIDI_SILENCE_WARNINGS__']
 endif
 
