--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -21,6 +21,9 @@ jobs:
    - name: Install ninja
      run: pipx install ninja
 
+   - name: Install alsa deps
+     run: sudo apt-get install libasound2-dev
+
    - name: Build sdist
      run: pipx run build --sdist
 
@@ -43,6 +46,9 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: true
+
+    - uses: ilammy/msvc-dev-cmd@v1
+      if: matrix.os == 'windows-latest'
 
     - name: Build wheels
       uses: pypa/cibuildwheel@v2.12.3
