--- a/.github/workflows/push_to_master.yml
+++ b/.github/workflows/push_to_master.yml
@@ -3,10 +3,7 @@ name: Build sdist and wheels and publish to TestPyPI
 on:
   push:
     branches:
-      - develop
-  pull_request:
-    branches:
-      - develop
+      - master
 
 jobs:
   build_sdist:
