--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ keywords = [
 meson-python-option-name = "python"
 meson-options = [
     "-Dwheel=true",
-    "-Dverbose=true",
+    "-Dverbose=false",
     "--buildtype=plain"
 ]
 
@@ -106,7 +106,7 @@ before-all = [
 
 [tool.cibuildwheel.macos]
 build = "cp3{8,9,10,11}-macosx*"
-archs = ["universal2"]
+archs = ["x86_64", "arm64"]
 environment = { MACOSX_DEPLOYMENT_TARGET = "10.14" }
 before-all = [
     "pipx install ninja",
@@ -115,4 +115,4 @@ before-all = [
 [tool.cibuildwheel.windows]
 build = "cp3{8,9,10,11}-win*"
 archs = ["AMD64"]
-build-verbosity = 1
+
