fix: define HAVE_SEMAPHORE preprocessor symbol when header is available
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/rtmidi/meson.build
+++ b/rtmidi/meson.build
@@ -34,6 +34,9 @@ endif
 
 if jack_support
     defines += ['-D__UNIX_JACK__', '-DJACK_HAS_PORT_RENAME']
+    if have_semaphore
+        defines += ['-DHAVE_SEMAPHORE']
+    endif
     dependencies += [jack_dep]
 endif
 
