--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,9 +105,9 @@ before-all = [
 ]
 
 [tool.cibuildwheel.macos]
-build = "cp3{8,9,10,11}-macosx*"
-archs = ["x86_64", "arm64"]
-environment = { MACOSX_DEPLOYMENT_TARGET = "10.14" }
+build = "cp311-macosx*"
+archs = ["arm64"]
+environment = { ARCHFLAGS="-arch arm64" }
 before-all = [
     "pipx install ninja",
 ]
