fix: add_project(_link)_arguments syntax and try different x-compilation target name
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/meson.build
+++ b/meson.build
@@ -55,12 +55,13 @@ elif host_machine.system() == 'darwin'
 
     # Enable cross compilation if host is x86 and target is arm64
     # Meson doesn't have env access support on purpose...
-    cmd = run_command('sh', '-c', 'echo $ARCHFLAGS ')
+    cmd = run_command('sh', '-c', 'echo $ARCHFLAGS ', check: true)
     ARCHFLAGS = cmd.stdout().strip()
+
     if host_machine.cpu_family() == 'x86_64' and ARCHFLAGS == '-arch arm64'
         message('Crosscompiling from Intel to Apple Silicon')
-        add_project_arguments('-arch arm64 --target=arm64-apple-darwin', language: ['cpp', 'c'])
-        add_project_link_arguments('-arch arm64 --target=arm64-apple-darwin', language: ['cpp', 'c'])
+        add_project_arguments('-arch', 'arm64', '--target=arm64-apple-macos', language: ['cpp', 'c'])
+        add_project_link_arguments('-arch', 'arm64', '--target=arm64-apple-macos', language: ['cpp', 'c'])
     endif
 
     # API
