pyproject.toml: move mesonpep517 options to correct section
According to mesonpep517 documentation [1] both meson-python-option-name
and meson-options should be in tool.mesonpep517.metadata rather than
project.

Signed-off-by: Marek Szuba <marecki@gentoo.org>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ keywords = [
     "music",
     "rtmidi",
 ]
+
+[tool.mesonpep517.metadata]
 meson-python-option-name = "python"
 meson-options = [
     "-Dwheel=true",
