Change the build back-end to meson-python
Pretty much a drop-in replacement as far as building python-rtmidi
is concerned, only the configuration had to be adjusted a bit:
 * add project.name - it is mandatory for meson-python;
 * change the name of the keyword used to pass options to Meson,
   along with the name of the section containing it. There doesn't seem
   to be a direct equivalent of meson-python-option-name, though;
 * use -Dbuildtype rather than --buildtype because with meson-python
   including the former in its default setup options, using the latter
   results in Meson complaining.

Signed-off-by: Marek Szuba <marecki@gentoo.org>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [build-system]
-# https://thiblahute.gitlab.io/mesonpep517/
-build-backend = "mesonpep517.buildapi"
+build-backend = "mesonpy"
 requires = [
     "cython",
     "wheel",
-    "mesonpep517 @ git+https://gitlab.com/SpotlightKid/mesonpep517.git@rtmidi",
+    "meson-python",
     "ninja"
 ]
 
 [project]
+name = "python-rtmidi"
 description = "A Python binding for the RtMidi C++ library implemented using Cython."
 authors = [
     { name="Christopher Arndt", email="info@chrisarndt.de" },
@@ -42,12 +42,11 @@ keywords = [
     "rtmidi",
 ]
 
-[tool.mesonpep517.metadata]
-meson-python-option-name = "python"
-meson-options = [
+[tool.meson-python.args]
+setup = [
     "-Dwheel=true",
     "-Dverbose=false",
-    "--buildtype=plain"
+    "-Dbuildtype=plain"
 ]
 
 [project.license]
