--- a/.github/workflows/pr_to_master.yml
+++ b/.github/workflows/pr_to_master.yml
@@ -27,6 +27,11 @@ jobs:
    - name: Check metadata
      run: pipx run twine check --strict dist/*
 
+   - name: Upload sdist
+     uses: actions/upload-artifact@v3
+     with:
+       path: dist/*.tar.gz
+
   build_wheels:
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -44,7 +49,12 @@ jobs:
       if: matrix.os == 'windows-latest'
 
     - name: Build wheels
-      uses: pypa/cibuildwheel@v2.12.3
+      uses: pypa/cibuildwheel@v2.13
+
+    - name: Upload wheels
+      uses: actions/upload-artifact@v3
+      with:
+        path: wheelhouse/*.whl
 
   build_arch_wheels:
    name: Build wheels on Linux ${{ matrix.arch }}
@@ -62,7 +72,8 @@ jobs:
      with:
        platforms: all
 
-   - uses: pypa/cibuildwheel@v2.12.3
+   - name: Build wheels
+     uses: pypa/cibuildwheel@v2.13
      env:
        CIBW_ARCHS: ${{ matrix.arch }}
 
@@ -70,3 +81,7 @@ jobs:
      run: git diff --exit-code
      shell: bash
 
+   - name: Upload wheels
+     uses: actions/upload-artifact@v3
+     with:
+       path: wheelhouse/*.whl
