--- a/.github/workflows/push_to_master.yml
+++ b/.github/workflows/push_to_master.yml
@@ -27,7 +27,8 @@ jobs:
    - name: Check metadata
      run: pipx run twine check --strict dist/*
 
-   - uses: actions/upload-artifact@v3
+   - name: Upload sdist
+     uses: actions/upload-artifact@v3
      with:
        path: dist/*.tar.gz
 
@@ -48,7 +49,7 @@ jobs:
       if: matrix.os == 'windows-latest'
 
     - name: Build wheels
-      uses: pypa/cibuildwheel@v2.12.3
+      uses: pypa/cibuildwheel@v2.13
 
     - uses: actions/upload-artifact@v3
       with:
@@ -70,7 +71,8 @@ jobs:
      with:
        platforms: all
 
-   - uses: pypa/cibuildwheel@v2.12.3
+   - name: Build wheels
+     uses: pypa/cibuildwheel@v2.13
      env:
        CIBW_ARCHS: ${{ matrix.arch }}
 
