[CI]: fix: skip testing macos_arm64 wheels
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/.github/workflows/pr_to_master.yml
+++ b/.github/workflows/pr_to_master.yml
@@ -50,6 +50,9 @@ jobs:
 
     - name: Build wheels
       uses: pypa/cibuildwheel@v2.13
+      env:
+        # Skip trying to test arm64 builds on Intel Macs
+        CIBW_TEST_SKIP: "*-macosx_arm64 *-macosx_universal2:arm64"
 
     - name: Upload wheels
       uses: actions/upload-artifact@v3
