--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,9 +81,6 @@ add_ignore = [
 [tool.pytest.ini_options]
 markers = [
     "ci: marks tests to run as part of the CI builds",
-    "linux: marks tests to run for default Linux builds",
-    "macos: marks tests to run for default macOS builds",
-    "windows: marks tests to run for default Windows builds",
 ]
 
 [tool.cibuildwheel]
@@ -108,14 +105,14 @@ before-all = [
     "python3 waf build",
     "python3 waf install",
 ]
-test-command = "pytest -v -m 'ci or linux' {package}/tests"
+test-command = "pytest -v -m ci {package}/tests"
 
 [tool.cibuildwheel.macos]
 build = "cp3{8,9,10,11}-macosx*"
 archs = ["x86_64", "arm64"]
-test-command = "pytest -v -m 'ci or macos' {package}/tests"
+test-command = "pytest -v -m ci {package}/tests"
 
 [tool.cibuildwheel.windows]
 build = "cp3{8,9,10,11}-win*"
 archs = ["AMD64"]
-test-command = "pytest -v -m 'ci or windows' {package}/tests"
+test-command = "pytest -v -m ci {package}/tests"
