Don't add a MSVC-style flag if not using MSVC on windows
This fixes builds on Windows when, for instance, one is using `clang` on top of
`MSys2`; and in a more generic way than the pre-existing solution.

For expected return values of the `get_argument_syntax()` method, see
https://mesonbuild.com/Reference-tables.html#compiler-ids

--- a/rtmidi/meson.build
+++ b/rtmidi/meson.build
@@ -26,7 +26,7 @@ endif
 
 if winmm_support
     defines += ['-D__WINDOWS_MM__']
-    if meson.get_compiler('cpp').get_id() != 'gcc'
+    if meson.get_compiler('cpp').get_argument_syntax() == 'msvc'
         defines += ['/EHsc']
     endif
     dependencies += [winmm_dep]
