--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,42 +4,42 @@
 #
 #    pip-compile --no-emit-index-url --strip-extras requirements-dev.in
 #
-alabaster==0.7.13
+alabaster==0.7.16
     # via sphinx
-babel==2.13.0
+babel==2.14.0
     # via sphinx
-build==1.0.3
+build==1.2.1
     # via pip-tools
-cachetools==5.3.1
+cachetools==5.3.3
     # via tox
-certifi==2023.7.22
+certifi==2024.2.2
     # via requests
 chardet==5.2.0
     # via tox
-charset-normalizer==3.3.0
+charset-normalizer==3.3.2
     # via requests
 click==8.1.7
     # via pip-tools
 colorama==0.4.6
     # via tox
-coverage==7.3.2
+coverage==7.4.4
     # via -r requirements-dev.in
-cython==3.0.4
+cython==3.0.10
     # via -r requirements-dev.in
-distlib==0.3.7
+distlib==0.3.8
     # via virtualenv
-docutils==0.18.1
+docutils==0.20.1
     # via
     #   myst-parser
     #   sphinx
     #   sphinx-rtd-theme
-filelock==3.12.4
+filelock==3.13.4
     # via
     #   tox
     #   virtualenv
-flake8==6.1.0
+flake8==7.0.0
     # via -r requirements-dev.in
-idna==3.4
+idna==3.7
     # via requests
 imagesize==1.4.1
     # via sphinx
@@ -53,7 +53,7 @@ markdown-it-py==3.0.0
     # via
     #   mdit-py-plugins
     #   myst-parser
-markupsafe==2.1.3
+markupsafe==2.1.5
     # via jinja2
 mccabe==0.7.0
     # via flake8
@@ -63,20 +63,20 @@ mdurl==0.1.2
     # via markdown-it-py
 myst-parser==2.0.0
     # via -r requirements-dev.in
-packaging==23.2
+packaging==24.0
     # via
     #   build
     #   pyproject-api
     #   pytest
     #   sphinx
     #   tox
-pip-tools==7.3.0
+pip-tools==7.4.1
     # via -r requirements-dev.in
-platformdirs==3.11.0
+platformdirs==4.2.0
     # via
     #   tox
     #   virtualenv
-pluggy==1.3.0
+pluggy==1.4.0
     # via
     #   pytest
     #   tox
@@ -84,15 +84,17 @@ pycodestyle==2.11.1
     # via flake8
 pydocstyle==6.3.0
     # via -r requirements-dev.in
-pyflakes==3.1.0
+pyflakes==3.2.0
     # via flake8
-pygments==2.16.1
+pygments==2.17.2
     # via sphinx
 pyproject-api==1.6.1
     # via tox
 pyproject-hooks==1.0.0
-    # via build
-pytest==7.4.2
+    # via
+    #   build
+    #   pip-tools
+pytest==8.1.1
     # via -r requirements-dev.in
 pyyaml==6.0.1
     # via myst-parser
@@ -107,35 +109,30 @@ sphinx==7.2.6
     #   -r requirements-dev.in
     #   myst-parser
     #   sphinx-rtd-theme
-    #   sphinxcontrib-applehelp
-    #   sphinxcontrib-devhelp
-    #   sphinxcontrib-htmlhelp
     #   sphinxcontrib-jquery
-    #   sphinxcontrib-qthelp
-    #   sphinxcontrib-serializinghtml
-sphinx-rtd-theme==1.3.0
+sphinx-rtd-theme==2.0.0
     # via -r requirements-dev.in
-sphinxcontrib-applehelp==1.0.7
+sphinxcontrib-applehelp==1.0.8
     # via sphinx
-sphinxcontrib-devhelp==1.0.5
+sphinxcontrib-devhelp==1.0.6
     # via sphinx
-sphinxcontrib-htmlhelp==2.0.4
+sphinxcontrib-htmlhelp==2.0.5
     # via sphinx
 sphinxcontrib-jquery==4.1
     # via sphinx-rtd-theme
 sphinxcontrib-jsmath==1.0.1
     # via sphinx
-sphinxcontrib-qthelp==1.0.6
+sphinxcontrib-qthelp==1.0.7
     # via sphinx
-sphinxcontrib-serializinghtml==1.1.9
+sphinxcontrib-serializinghtml==1.1.10
     # via sphinx
-tox==4.11.3
+tox==4.14.2
     # via -r requirements-dev.in
-urllib3==2.0.7
+urllib3==2.2.1
     # via requests
-virtualenv==20.24.5
+virtualenv==20.25.1
     # via tox
-wheel==0.41.2
+wheel==0.43.0
     # via pip-tools
 
 # The following packages are considered to be unsafe in a requirements file:
