--- a/.github/workflows/push_to_master.yml
+++ b/.github/workflows/push_to_master.yml
@@ -30,7 +30,9 @@ jobs:
     - name: Upload sdist
       uses: actions/upload-artifact@v4
       with:
+        name: sdist
         path: dist/*.tar.gz
+        compression-level: 0
 
   build_wheels:
     name: Build wheels on ${{ matrix.os }}
@@ -68,7 +70,9 @@ jobs:
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
+        name: bdist-${{ matrix.os }}
         path: wheelhouse/*.whl
+        compression-level: 0
 
   build_arch_wheels:
     name: Build wheels on Linux ${{ matrix.arch }}
@@ -82,7 +86,7 @@ jobs:
       with:
         submodules: true
 
-    - uses: docker/setup-qemu-action@v2
+    - uses: docker/setup-qemu-action@v3
       with:
         platforms: all
 
@@ -98,7 +102,9 @@ jobs:
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
+        name: bdist-linux-${{ matrix.arch }}
         path: wheelhouse/*.whl
+        compression-level: 0
 
   upload_pypi:
     needs: [build_arch_wheels, build_wheels, build_sdist]
@@ -109,13 +115,11 @@ jobs:
 
     - uses: actions/download-artifact@v4
       with:
-        # unpacks default artifact into dist/
-        # if `name: artifact` is omitted, the action will create extra parent dir
-        name: artifact
         path: dist
+        merge-multiple: true
 
     - name: Publish distribution to Test PyPI
-      uses: pypa/gh-action-pypi-publish@v1.8.6
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
         skip_existing: true
         user: __token__
