--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,9 @@ jobs:
     - name: Upload sdist
       uses: actions/upload-artifact@v4
       with:
+        name: sdist
         path: dist/*.tar.gz
+        compression-level: 0
 
   build_wheels:
     name: Build wheels on ${{ matrix.os }}
@@ -71,7 +73,9 @@ jobs:
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
+        name: bdist-${{ matrix.os }}
         path: wheelhouse/*.whl
+        compression-level: 0
 
   build_arch_wheels:
     name: Build wheels on Linux ${{ matrix.arch }}
@@ -85,7 +89,7 @@ jobs:
       with:
         submodules: true
 
-    - uses: docker/setup-qemu-action@v2
+    - uses: docker/setup-qemu-action@v3
       with:
         platforms: all
 
@@ -101,7 +105,9 @@ jobs:
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
+        name: bdist-linux-${{ matrix.arch }}
         path: wheelhouse/*.whl
+        compression-level: 0
 
   upload_pypi:
     needs: [build_arch_wheels, build_wheels, build_sdist]
@@ -110,13 +116,11 @@ jobs:
     steps:
     - uses: actions/download-artifact@v4
       with:
-        # unpacks default artifact into dist/
-        # if `name: artifact` is omitted, the action will create extra parent dir
-        name: artifact
         path: dist
+        merge-multiple: true
 
     - name: Publish distribution to PyPI
-      uses: pypa/gh-action-pypi-publish@v1.8.6
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
