ci: fix workflow dependencies
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/.github/workflows/push_to_master.yml
+++ b/.github/workflows/push_to_master.yml
@@ -68,7 +68,7 @@ jobs:
         compression-level: 0
 
   upload_pypi:
-    needs: [build_arch_wheels, build_wheels, build_sdist]
+    needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
     environment: PyPI release
     if: github.ref == 'refs/heads/develop'
